# srce

./: CMakeLists.txt  README.md  arm32.cmake
.devcontainer/: devcontainer.json  docker-compose.yml
_libs/: libgcc_s.so.1  libstdc++.so.6
battery/: CMakeLists.txt  battery.cpp  battery.h  batteryIf.cpp  batteryIf.h
graphics/: CMakeLists.txt  battery_icon.h  device_definitions.h  ft800.cpp  ft800.h  ft800Formats.h  ft800If.cpp  ft800If.h  ft800Reg.h  ft800_constants.h  graph_battery_icon.h  graph_device_definitions.h  graph_ft800.cpp  graph_ft800.h  graph_ft800Reg.h  graph_ft800_ioctl.h  graph_memory_icon.h  graph_touch.cpp  graph_touch.h  gui_components.h  memory_icon.h  spiIf.cpp  spiIf.h  touch.cpp  touch.h
src/: CMakeLists.txt  definitions.h  ft800.h  ft800_regs.h  ft800_uapi.h  main  main.cpp
src/code_examples/: basic_test.cpp  fifo-rectangle-demo.cpp  ioctl_reset_test.cpp  ioctl_rw8_tets.cpp  ioctl_test_cmd_write.cpp  ioctl_test_ft800_push_mmap.cpp
